# playground

./: .gitignore  Cargo.toml  README.md
src/: chat.rs  main.rs  openai.rs  settings.rs
