[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = "1.39.2"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-eventsource = "0.6.0"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["rt", "macros"] }